---------------------------------------------------------------------------------------------------
Version: 1.18.6
Date: 2020.XX.XX
  Features:
    - Added Miniloader support
---------------------------------------------------------------------------------------------------
Version: 1.18.5
Date: 2020.05.01
  Bugfixes:
    - Fixed burner inserter beeing in the wrong item subgroup in some cases
    - Fixed Changelog formatting
---------------------------------------------------------------------------------------------------
Version: 1.18.4
Date: 2020.04.26
  Features:
    - Added Burner inserter Mk2 and burner filter-inserter Mk2 that accept Omnified Fuel
    - Added tech description for Omnified Fuel 1-5
  Changes:
    - Moved Omnium-power behind steam-power research
    - Changed Omnitor stack size from 50 to 100
---------------------------------------------------------------------------------------------------
Version: 1.18.3
Date: 2020.04.17
  Changes:
    - Change the Subgroup Icon to the Thumbnail
    - Increase the crafting time of Purified Omnite to 2s
---------------------------------------------------------------------------------------------------
Version: 1.18.2
Date: 2020.04.19
  Changes:
    - Reorganised Item-Subgroups
    - Steel Furnaces accept Omnified Fuel
    - Disabled Bob´s burner generator
    - Buff Omnitor Assembler speed when playing without Bob´s assembly
    - Lower Omnitor Omnicium cost
  Bugfixes:
    - Fixed Omni Furnaces not beeing fast replacable
    - Fixed Furnaces having 7 Output slots in some cases
    - Fixed logistics Tech having hidden prerequisites in some cases
---------------------------------------------------------------------------------------------------
Version: 1.18.1
Date: 2020.04.17
  Bugfixes:
    - Fixed logistics tech dead end. Might have some empty techs left in some cases.
    - Fixed crashes if Bob's assembers are on without steam machines