@@ -3,6 +3,10 @@ Version: 1.18.6
 Date: 2020.XX.XX
   Features:
     - Added Miniloader support
+  Changes:
+    - Added an item subgroup for each tier of omnified fuel
+  Bugfixes:
+    - Fixed that certain Omnified Fuels were not craftable
 ---------------------------------------------------------------------------------------------------
 Version: 1.18.5
 Date: 2020.05.01
